<?xml version="1.0"?>
<package>
  <name>raspicat</name>
  <version>0.0.1</version>
  <description>Base nodes for Rasberry Pi Cat</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>

  <author email="ryuichiueda@gmail.com">Ryuichi Ueda</author>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/ja/raspicat</url>
  <url type="repository">https://github.com/rt-net/raspicat_ros</url>
  <url type="bugtracker">https://github.com/rt-net/raspicat_ros/issues</url>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
  </export>
</package>
