<?xml version="1.0"?>
<package format="2">
  <name>raspicat</name>
  <version>0.1.0</version>
  <description>The raspicat meta package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <license>Apache-2.0</license>

  <url type="bugtracker">https://github.com/rt-net/raspicat_ros/issues</url>
  <url type="repository">https://github.com/rt-net/raspicat_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>raspicat_bringup</exec_depend>
  <exec_depend>raspicat_control</exec_depend>
  <exec_depend>raspicat_gamepad_controller</exec_depend>

  <export>
    <metapackage />
  </export>
</package>