<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspicat_bringup</name>
  <version>0.0.0</version>
  <description>The raspicat_bringup package</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>lifecycle_msgs</depend>
  <depend>raspicat_description</depend>
  <depend>sensor_msgs</depend>
  <depend>teleop_twist_joy</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
