<?xml version="1.0"?>
<package>
  <name>raspicat_gamepad_controller</name>
  <version>0.0.0</version>
  <description>The raspicat_gamepad_controller package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <author email="ryo.okazaki.0929@gmail.com">Ryo Okazaki</author>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>Apache-2.0</license>

  <url type="repository">https://github.com/rt-net/raspicat_ros</url>
  <url type="bugtracker">https://github.com/rt-net/raspicat_ros/issues</url>
  <url type="website">https://rt-net.github.io/tutorials/raspicat/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joy</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>ps3joy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>

  <export>
  </export>
</package>
